--- a/package.json
+++ b/package.json
@@ -7,13 +7,20 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
-    "chart.js": "^3.6.2",
+    "moment": "^2.29.1",
+    "momentjs": "^2.0.0",
     "passport": "^0.5.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
     "react-router-dom": "^6.2.0",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.2"
+    "recharts": "^2.1.8",
+    "victory": "^36.2.0",
+    "web-vitals": "^2.1.2",
+    "webpack": "^5.65.0",
+    "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
