--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "momentjs": "^2.0.0",
     "passport": "^0.5.2",
     "react": "^17.0.2",
+    "react-d3-library": "^1.1.8",
     "react-dom": "^17.0.2",
     "react-moment": "^1.1.1",
     "react-router-dom": "^6.2.0",
